Add body text on freelance button
Closes #3

For now ... maybe I'll make a full on form.

--- a/app/index.html
+++ b/app/index.html
@@ -14,5 +14,5 @@ title: Home
 
   <p>Want to talk? You can find me as <a href="http://twitter.com/kuatsure">@kuatsure</a> on twitter, email me at <a class="js-email-btn">jarrett [at] thestyl.us</a>, or on any of these <a href="https://github.com/kuatsure/irc-channels">IRC channels on #freenode</a>.</p>
 
-  <a class="btn btn--positive js-email-btn">I'm currently accepting freelance projects.</a>
+  <a class="btn btn--positive js-freelance-btn">I'm currently accepting freelance projects.</a>
 </div>
