fix: add gravatar image
Add flag object from inuitcss lib.

Closes #2

--- a/app/index.html
+++ b/app/index.html
@@ -4,15 +4,21 @@ title: Home
 ---
 
 <div id="aboutMe" class="collapse main">
-  <h2>About Me</h2>
+  <div class="flag flag--top flag--rev">
+    <div class="flag__img"><img src="https://s.gravatar.com/avatar/6ed4152e87cc06be69a22817ba93aaa5?s=300" alt="{{site.author.name}}" /></div>
 
-  <p>I'm a developer working with the awesome people of <a href="http://creativeelementsgroup.com">Creative Elements Group</a> located in the Queen City.</p>
+    <div class="flag__body">
+      <h2>About Me</h2>
 
-  <p>I've had my hand in projects such as <a href="http://hapzing.com">Hapzing</a> and many different open source projects: <a href="http://github.com/kuatsure/generator-skeletor">yo skeletor</a>, a <a href="https://github.com/kuatsure/symbolset-all">suite of bower components</a> for the Symbolset font library, and <a href="https://github.com/kuatsure/helpful-helpers">helpful helpers</a> a mini Sass mixin/class library; just to name a few.</p>
+      <p>I'm a developer working with the awesome people of <a href="http://creativeelementsgroup.com">Creative Elements Group</a> located in the Queen City.</p>
 
-  <p>I'm always learning new things in my field. Right now I'm loving <a href="http://gruntjs.com">grunt</a>, <a href="http://bower.io">bower</a>, and <a href="http://yeoman.io">yeoman</a>. Looking into <a href="http://emberjs.com/">ember</a>, <a href="http://jekyllrb.com">jekyll</a>, and <a href="http://assemble.io">assemble</a>.</p>
+      <p>I've had my hand in projects such as <a href="http://hapzing.com">Hapzing</a> and many different open source projects: <a href="http://github.com/kuatsure/generator-skeletor">yo skeletor</a>, a <a href="https://github.com/kuatsure/symbolset-all">suite of bower components</a> for the Symbolset font library, and <a href="https://github.com/kuatsure/helpful-helpers">helpful helpers</a> a mini Sass mixin/class library; just to name a few.</p>
 
-  <p>Want to talk? You can find me as <a href="http://twitter.com/kuatsure">@kuatsure</a> on twitter, email me at <a class="js-email-btn">jarrett [at] thestyl.us</a>, or on any of these <a href="https://github.com/kuatsure/irc-channels">IRC channels on #freenode</a>.</p>
+      <p>I'm always learning new things in my field. Right now I'm loving <a href="http://gruntjs.com">grunt</a>, <a href="http://bower.io">bower</a>, and <a href="http://yeoman.io">yeoman</a>. Looking into <a href="http://emberjs.com/">ember</a>, <a href="http://jekyllrb.com">jekyll</a>, and <a href="http://assemble.io">assemble</a>.</p>
 
-  <a class="btn btn--positive js-freelance-btn">I'm currently accepting freelance projects.</a>
+      <p>Want to talk? You can find me as <a href="http://twitter.com/kuatsure">@kuatsure</a> on twitter, email me at <a class="js-email-btn">jarrett [at] thestyl.us</a>, or on any of these <a href="https://github.com/kuatsure/irc-channels">IRC channels on #freenode</a>.</p>
+
+      <a class="btn btn--positive js-freelance-btn">I'm currently accepting freelance projects.</a>
+    </div>
+  </div>
 </div>
